# src/controllers/ping.ts
@@ -1,35 +1,31 @@
 import { Get, Post, Route, Body, Tags } from "tsoa";
-import { Photo } from "../models/user";
 import { AppDataSource } from "../config/database";
-import { BaseResponse, StatusCode } from "../models/baseResponse";
+import { BaseResponse, StatusCode } from "../models/BaseResponse";
+import { UserRequest } from "../models/user/UserRequest";
+import { UserRepository } from "../repositories/user/User";
+import { User } from "../entities/User";
+import { UserService } from "../servis/user/UserService";
 
 @Route("ping")
 @Tags("Ping")
 export default class PingController {
-  @Get("/")
-  public async getMessage(): Promise<BaseResponse<Photo>> {
-    const data = await AppDataSource.manager.find(Photo);
+  @Post("create")
+  public async createUser(@Body() body: UserRequest): Promise<BaseResponse<boolean>> {
+    const useRepository = new UserService(new UserRepository(AppDataSource.manager, User));
+    const createUser = await useRepository.createUser(body);
+    console.log(createUser);
 
-    const response = new BaseResponse(data, true, StatusCode.NotFound, "Success");
-
+    const response = new BaseResponse<boolean>(true, true, StatusCode.Success, "User created successfully");
     return response;
   }
 
-  @Post("/")
-  public async createUser(@Body() body: Photo): Promise<BaseResponse<Photo>> {
-    const photo = new Photo();
+  @Post("update")
+  public async updateUser(@Body() body: UserRequest): Promise<BaseResponse<boolean>> {
+    const useRepository = new UserRepository(AppDataSource.manager, User);
+    const createUser = await useRepository.updateUser(body.id ?? 0, body);
+    console.log(createUser);
 
-    photo.name = body.name;
-    photo.description = "I am near polar bears";
-    photo.filename = "photo-with-bears.jpg";
-    photo.isPublished = true;
-
-    const data = await AppDataSource.manager.save(photo);
-    return {
-      data: data,
-      success: true,
-      statusCode: StatusCode.Success,
-      message: "Success",
-    };
+    const response = new BaseResponse<boolean>(true, true, StatusCode.Success, "User updated successfully");
+    return response;
   }
 }
