# src/models/user/UserRequest.ts
@@ -1,0 +1,5 @@
+export type UserRequest = {
+  id?: number;
+  name: string;
+  lastname: string;
+};
